# dreid-typer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: 01_pipeline.md  02_perception.md  03_typing_engine.md  04_topology_builder.md  05_rule_system.md  ARCHITECTURE.md
resources/: default.rules.toml  dreiding.rules.toml
src/: lib.rs
src/builder/: mod.rs
src/core/: error.rs  errors.rs  graph.rs  mod.rs  properties.rs  topology.rs
src/engine/: mod.rs
src/perception/: aromaticity.rs  electrons.rs  hybridization.rs  kekulize.rs  mod.rs  model.rs  resonance.rs  rings.rs
src/processor/: annotate.rs  aromaticity.rs  graph.rs  hybridization.rs  mod.rs  perception.rs  pipeline.rs  rings.rs  templates.rs  typer.rs
src/rules/: default.rs  mod.rs
src/typing/: engine.rs  mod.rs  rules.rs
tests/: harness.rs  integration_tests.rs
tests/cases/: amino_acids.rs  dreiding_paper.rs  mod.rs  nucleic_acids.rs
