[package]
name = "dreid-typer"
version = "0.5.0"
authors = [
    "Tony Kan <tonykan@caltech.edu>",
    "William A. Goddard III <wag@caltech.edu>",
]
license = "MIT"
repository = "https://github.com/caltechmsc/dreid-typer"
edition = "2024"
description = "A pure Rust library for DREIDING atom typing and molecular topology perception."
keywords = [
    "chemistry",
    "molecular-dynamics",
    "force-field",
    "cheminformatics",
    "dreiding",
]
categories = [
    "science::computational-chemistry::molecular-simulation",
    "science::computational-chemistry::cheminformatics",
    "simulation",
]
readme = "README.md"

[dependencies]
thiserror = "2.0.18"
toml = "0.9.7"
serde = { version = "1.0.188", features = ["derive"] }

[lib]
name = "dreid_typer"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
